--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-registry=https://registry.npmjs.org/
+@linthtml:registry=https://registry.npmjs.org/
+@babel:registry=https://registry.npmjs.org/
+@mate-academy:registry=https://registry.npmjs.org/
